--- a/package.json
+++ b/package.json
@@ -11,10 +11,9 @@
     "async": "~0.2.6",
     "lodash": "~1.0.1",
     "express3-handlebars": "~0.3.2",
-    "express-load": "~1.1.7",
     "socket.io": "~0.9.13",
     "redis": "~0.8.2",
-    "gzippo": "~0.2.0",
-    "moment": "~2.0.0"
+    "moment": "~2.0.0",
+    "debug" : "*"
   }
 }
